--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,4 @@ NODE_ENV=
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 # Secret key is used with chec/seeder to access your Chec account to seed it with sample data
 CHEC_SECRET_KEY=
-CHEC_API_URL=https://api.chec.i
+CHEC_API_URL=https://api.chec.io
